tests/NormalTests/paczka1/small_fuzzy/45531135.err
Error in line 5: zuM2HZ5II S706 26,7
Error in line 9: S330 S330 80,6
Error in line 13: S330 S706 2,0
